# JICE

./: .gitignore  CMakeLists.txt  README.md
engine/: engine.py  jice.bat
engine/jice/: CMakeLists.txt
engine/jice/Engine/: Script.h  Version.h
engine/jice/Engine/builtin/: Image2d.cpp  Image2d.h  Square.cpp  Square.h  Transform.cpp  Transform.h  builtin.cpp  builtin.h
engine/jice/Engine/internal/: Asset.cpp  Asset.h  Engine.cpp  Engine.h  Object.cpp  Object.h  RenderTask.h  Scene.cpp  Scene.h  Scripting.cpp  Scripting.h
engine/jice/Engine/math/: Vector.h
engine/jice/Engine/util/: Popup.cpp  Popup.h
engine/jice/editor/: CMakeLists.txt  imgui.ini
engine/jice/editor/src/: editor_ui.cpp  editor_ui.h  im_panel.cpp  im_panel.h  main.cpp
engine/jice/editor/src/menus/: Menu.h
engine/jice/editor/src/proj/: JiceAttribute.h  JiceObject.h  JiceProject.h  JiceScene.h  json_loadlib.h
engine/jice/jicc/: CMakeLists.txt  main.py
engine/jice/jicc/src/: main.cpp
engine/jice/template/: proj.json
engine/jice/template/scenes/: Scene1.json
engine/jice/template/scripts/: FirstScript.cpp
projects/testproject/: CMakeLists.txt  proj.json
projects/testproject/assets/: default_3f2f_pt.frag  default_3f2f_pt.vert  default_3f2f_pt.vert.jmeta  test.png.jmeta
projects/testproject/scenes/: TestScene.json
projects/testproject/scripts/: TestScript.cpp
